--- a/lib/src/components/layout/layout.scss
+++ b/lib/src/components/layout/layout.scss
@@ -5,14 +5,14 @@
 
   .layout__content {
     display: grid;
-    grid-template-rows: [header] auto [content] 100%;
+    grid-template-rows: [header] auto [content] 1fr;
     height: 100%;
     position: relative;
     z-index: 0;
   }
 
   .content {
-    height: 100%;
+    max-height: 100%;
     padding: 0 24px;
     overflow-y: auto;
   }
