--- a/lib/src/components/containers/lectures_container/lectures_container.scss
+++ b/lib/src/components/containers/lectures_container/lectures_container.scss
@@ -1,4 +1,5 @@
 @import "../../../../../web/assets/styles/variables.scss";
+@import "../../../styles/common.scss";
 
 :host {
 
@@ -10,13 +11,13 @@
     padding: 12px 0;
     margin-right: -24px; // todo
     overflow-x: auto;
+  }
 
-    .tags__item {
-      flex-shrink: 0;
+  .tags__item {
+    flex-shrink: 0;
 
-      + .tags__item {
-        margin-left: 8px;
-      }
+    + .tags__item {
+      margin-left: 8px;
     }
   }
   // --- end tags
@@ -25,10 +26,10 @@
 
   .schedule {
     margin-right: -16px;
+  }
 
-    .schedule__event + .schedule__event {
-      margin-top: 8px;
-    }
+  .schedule__event + .schedule__event {
+    margin-top: 8px;
   }
   // --- end schedule
 
@@ -36,58 +37,58 @@
 
   .event {
     display: flex;
+  }
 
-    .event__time {
-      flex-shrink: 0;
-      margin-right: 16px;
-      width: 5ch;
-      padding-top: 16px;
-      color: $font-color-secondary;
+  .event__time {
+    flex-shrink: 0;
+    margin-right: 16px;
+    width: 5ch;
+    padding-top: 16px;
+    color: $font-color-secondary;
+    position: relative;
+
+    &::before {
+      content: "";
+      display: block;
+      width: 2px;
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      left: -22px;
+      background-image: repeating-radial-gradient(circle, #b9bac1 0px, #b9bac1 1px, transparent 1px, transparent 100%);
+      background-size: 2px 14px;
+      background-position-y: -10px;
+      background-position-x: 0px;
+      background-repeat: repeat-y;
+    }
+  }
+
+  .event__time-item {
+    display: block;
+
+    + .event__time-item {
+      margin-top: 4px;
+    }
+
+    &.event__time-item--start {
+      font-weight: $font-weight-bold;
       position: relative;
 
       &::before {
         content: "";
         display: block;
-        width: 2px;
+        background: #94959b;
+        width: 16px;
+        height: 2px;
         position: absolute;
-        top: 0;
-        bottom: 0;
+        top: 8px;
         left: -22px;
-        background-image: repeating-radial-gradient(circle, #b9bac1 0px, #b9bac1 1px, transparent 1px, transparent 100%);
-        background-size: 2px 14px;
-        background-position-y: -10px;
-        background-position-x: 0px;
-        background-repeat: repeat-y;
       }
     }
+  }
 
-    .event__time-item {
-      display: block;
-
-      + .event__time-item {
-        margin-top: 4px;
-      }
-
-      &.event__time-item--start {
-        font-weight: $font-weight-bold;
-        position: relative;
-
-        &::before {
-          content: "";
-          display: block;
-          background: #94959b;
-          width: 16px;
-          height: 2px;
-          position: absolute;
-          top: 8px;
-          left: -22px;
-        }
-      }
-    }
-
-    .event__info {
-      flex-grow: 1;
-    }
+  .event__info {
+    flex-grow: 1;
   }
   // --- end event
 
@@ -99,73 +100,35 @@
     border-radius: 6px; // todo
     background-color: #ffffff; // todo
     box-shadow: 0 2px 23px 0 rgba(0, 0, 0, 0.06); // todo
+  }
 
-    .event-card__meta {
-      color: $font-color-secondary;
-      margin-bottom: 4px;
-    }
+  .event-card__meta {
+    color: $font-color-secondary;
+    margin-bottom: 4px;
+  }
 
-    .event-card__meta-item + .event-card__meta-item {
+  .event-card__meta-item + .event-card__meta-item {
 
-      &::before {
-        content: "•";
-      }
-    }
-
-    .event-card__title {
-      @include font-heading-3;
-    }
-
-    .event-card__speakers {
-      margin-top: 8px;
-    }
-
-    .event-card__actions {
-      position: absolute;
-      right: 8px; // todo
-      bottom: 8px; // todo
-    }
-
-    // info item (todo: replace in component)
-    .info-item {
-      display: flex;
-
-      .info-item__media {
-        flex-shrink: 0;
-        margin-right: 8px;
-      }
-
-      .info-item__media-container {
-        flex-shrink: 0;
-        display: inline-flex;
-        width: 36px; // todo
-        height: 36px; // todo
-        margin: -2px; // todo
-        border: 2px solid #ffffff; // todo
-        border-radius: 50%;
-        overflow: hidden;
-        vertical-align: top;
-
-        + .info-item__media-container {
-          margin-left: -15px; // todo
-        }
-      }
-
-      .info-item__media-image {
-        display: block;
-        width: 100%;
-        object-fit: cover;
-      }
-
-      .info-item__title,
-      .info-item__subtitle {
-        line-height: 16px;
-      }
-
-      .info-item__subtitle {
-        color: $font-color-secondary;
-      }
+    &::before {
+      content: "•";
     }
   }
+
+  .event-card__title {
+    @include font-heading-3;
+  }
+
+  .event-card__speakers {
+    margin-top: 8px;
+  }
+
+  .event-card__actions {
+    position: absolute;
+    right: 8px; // todo
+    bottom: 8px; // todo
+  }
   // --- end event card
+
+  // info item (todo: replace in component)
+  @include info-item;
 }
