--- a/lib/src/components/containers/lectures_container/lectures_container.scss
+++ b/lib/src/components/containers/lectures_container/lectures_container.scss
@@ -1,84 +1,134 @@
-@import '../../../styles/main';
+@import "../../../../../web/assets/styles/variables.scss";
+@import "../../../styles/common.scss";
 
 :host {
-  display: block;
 
-  .lecture {
+  // tags ---
+
+  .tags {
     display: flex;
-    padding: $padding-6 $padding-3 0;
+    flex-wrap: nowrap;
+    padding: 12px 0;
+    margin-right: -24px; // todo
+    overflow-x: auto;
+  }
 
-    .lecture__time {
-      margin-right: $padding-6;
+  .tags__item {
+    flex-shrink: 0;
 
-      .lecture_time_start {
-        @include font-caption();
-        color: $mat-black;
-        padding-bottom: $padding-3;
-      }
+    + .tags__item {
+      margin-left: 8px;
+    }
+  }
+  // --- end tags
 
-      .lecture_time_end {
-        @include font-caption();
-      }
+  // schedule ---
+
+  .schedule {
+    margin-right: -16px;
+  }
+
+  .schedule__event + .schedule__event {
+    margin-top: 8px;
+  }
+  // --- end schedule
+
+  // event ---
+
+  .event {
+    display: flex;
+  }
+
+  .event__time {
+    flex-shrink: 0;
+    margin-right: 16px;
+    width: 5ch;
+    padding-top: 16px;
+    color: $font-color-secondary;
+    position: relative;
+
+    &::before {
+      content: "";
+      display: block;
+      width: 2px;
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      left: -22px;
+      background-image: repeating-radial-gradient(circle, #b9bac1 0px, #b9bac1 1px, transparent 1px, transparent 100%);
+      background-size: 2px 14px;
+      background-position-y: -10px;
+      background-position-x: 0px;
+      background-repeat: repeat-y;
+    }
+  }
+
+  .event__time-item {
+    display: block;
+
+    + .event__time-item {
+      margin-top: 4px;
     }
 
-    .lecture__info {
-      width: 100%;
-      border-bottom: 1px $mat-border-light solid;
-      padding-bottom: $padding-3;
+    &.event__time-item--start {
+      font-weight: $font-weight-bold;
+      position: relative;
 
-      .lecture_location {
-        @include font-caption();
-        float: left;
-        padding-right: $padding-3;
-      }
-
-      .lecture_section {
-        @include font-caption();
-        padding-bottom: $padding-3;
-        display: flex;
-        justify-content: space-between;
-      }
-
-      .lecture_language {
-        text-transform: uppercase;
-      }
-
-      .lecture_title {
+      &::before {
+        content: "";
         display: block;
-        padding-bottom: $padding-4;
-      }
-
-      .lecture__speaker {
-        display: flex;
-        margin-bottom: $padding-3;
-
-        .lecture_speaker_avatar {
-          display: block;
-          justify-content: center;
-          align-items: center;
-          border-radius: 50%;
-          width: 50px;
-          height: 50px;
-          margin-right: $padding-6;
-        }
-
-        .lecture_speaker_info_name {
-          @include mat-font-body();
-          padding-bottom: $padding-1;
-        }
-
-        .lecture_speaker_info_company {
-          @include font-caption();
-        }
-
-        .lecture__actions {
-          margin-left: auto;
-        }
+        background: #94959b;
+        width: 16px;
+        height: 2px;
+        position: absolute;
+        top: 8px;
+        left: -22px;
       }
     }
   }
 
-  .selected {
-    background-color: $mat-blue;
+  .event__info {
+    flex-grow: 1;
   }
+  // --- end event
+
+  // event card ---
+
+  .event-card {
+    padding: 16px 24px 16px 16px; // todo
+    position: relative; // for actions
+    border-radius: 6px; // todo
+    background-color: #ffffff; // todo
+    box-shadow: 0 2px 23px 0 rgba(0, 0, 0, 0.06); // todo
+  }
+
+  .event-card__meta {
+    color: $font-color-secondary;
+    margin-bottom: 4px;
+  }
+
+  .event-card__meta-item + .event-card__meta-item {
+
+    &::before {
+      content: "•";
+    }
+  }
+
+  .event-card__title {
+    @include font-heading-3;
+  }
+
+  .event-card__speakers {
+    margin-top: 8px;
+  }
+
+  .event-card__actions {
+    position: absolute;
+    right: 8px; // todo
+    bottom: 8px; // todo
+  }
+  // --- end event card
+
+  // info item (todo: replace in component)
+  @include info-item;
 }
