--- a/lib/src/components/containers/lectures_container/lectures_container.html
+++ b/lib/src/components/containers/lectures_container/lectures_container.html
@@ -2,7 +2,7 @@
   [isReady]="isReady">
 
   <layout
-    [title]="'Lectures'">
+    [title]="'Расписание'">
 
     <!-- Actions -->
     <layout-actions
