--- a/lib/src/components/containers/about_container/about_container.html
+++ b/lib/src/components/containers/about_container/about_container.html
@@ -4,24 +4,77 @@
   <div
     content>
 
-    <p>
-      Wrike и CodeFestX объединились, чтобы помочь тебе настроить свое расписание конференции. Сейчас ты видишь базовую
-      версию, давай сделаем лучше?
+    <div
+      class="about__logos" 
+      aria-hidden="true">
+      <img
+        src="assets/images/about/codefest.png" 
+        width="34" 
+        height="48" />
+      <svg 
+        class="cross" 
+        viewBox="0 0 25 25" 
+        width="25" 
+        height="25">
+          <path d="M 2,2 L 23,23 M 23,2 L 2,23" stroke="#999" />
+      </svg>
+      <img
+        src="assets/images/about/wrike.png" 
+        width="73" 
+        height="48" />
+    </div>
+    
+    <p
+      class="about__description">
+      Wrike и CodeFest X объединились, чтобы помочь тебе настроить свое расписание конференции. Сейчас ты видишь базовую
+      версию, давай сделаем лучше? Приходи на стенд Wrike покодить в гараже 
     </p>
 
-    <p>
-      Приходи на стенд Wrike покодить в гараже:<br>
-      запили фичу, которой тебе не хватает<br>
-      пофикси багу, которая тебя раздражает<br>
-      поделись своими безумными идеями с нами<br>
+    <ul
+      class="about__options">
+      <li
+        class="about__options-item">
+        <img
+          src="assets/images/about/feature.png" 
+          alt=""
+          role="presentation" 
+          height="40">
+        <div
+          class="about__options-item-text">запили фичу, которой тебе не&nbsp;хватает</div>
+      </li>
+      <li
+        class="about__options-item">
+        <img
+          src="assets/images/about/bug.png" 
+          alt=""
+          role="presentation" 
+          height="40">
+        <div
+          class="about__options-item-text">пофикси багу, которая тебя раздражает</div>
+      </li>
+      <li
+        class="about__options-item">
+        <img
+          src="assets/images/about/idea.png" 
+          alt=""
+          role="presentation" 
+          height="40">
+        <div
+          class="about__options-item-text">поделись своими безумными идеями с&nbsp;нами</div>
+      </li>
+    </ul>
+
+    <p class="about__alt">
+      <span
+        class="about__alt-text">
+        или <span class="visually-hidden">
+          отправь нам Pull Request на GitHub:
+        </span>
+      </span>
     </p>
 
-    <p>
-      Не хочешь ходить -- делай MR тут: <a href="https://github.com/wrike/codefestx" target="_blank">https://github.com/wrike/codefestx</a>
-    </p>
-
-    <p>
-      Будет пушка!
+    <p class="about__github">
+      <a href="https://github.com/wrike/codefestx" target="_blank">https://github.com/wrike/codefestx</a>
     </p>
   </div>
 </layout>
