--- a/web/assets/styles/variables.scss
+++ b/web/assets/styles/variables.scss
@@ -2,6 +2,7 @@
 $bgr-color: #f2f3fa;
 $font-color-main: #272a36;
 $font-color-secondary: #898a92;
+$link-color: #68c0e3;
 
 // Utility
 $border-radius: 8px;
