--- a/web/assets/styles/style.scss
+++ b/web/assets/styles/style.scss
@@ -17,6 +17,17 @@ body {
   width: 600px;
   height: 100%;
   margin: 0 auto;
-  background-color: #ffffff; // todo
-  @include font-main;
+}
+
+.visually-hidden {
+  position: absolute;
+
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
