--- a/web/assets/styles/style.scss
+++ b/web/assets/styles/style.scss
@@ -17,6 +17,8 @@ body {
   width: 600px;
   height: 100%;
   margin: 0 auto;
+  background-color: #ffffff; // todo
+  @include font-main;
 }
 
 .visually-hidden {
