--- a/lib/src/components/containers/lectures_container/lectures_container.html
+++ b/lib/src/components/containers/lectures_container/lectures_container.html
@@ -161,7 +161,10 @@
                 *ngIf="lecture.speakers.length == i + 1"
                 class="event-card__actions">
 
-                <actions></actions>
+                <actions
+                  [isFavorite]="isFavoriteLecture(lecture)"
+                  (onFavoriteChange)="onFavoriteChange(lecture, $event)">
+                </actions>
               </div>
             </ng-container>
           </article>
