Improve layout on mobile

--- a/lib/src/components/layout/layout.html
+++ b/lib/src/components/layout/layout.html
@@ -35,7 +35,7 @@
 
   <!-- Header -->
   <header
-    class="material-header">
+    class="layout-header">
 
     <div
       class="material-header-row">
