--- a/lib/src/components/ui/button/button.scss
+++ b/lib/src/components/ui/button/button.scss
@@ -8,20 +8,22 @@ $button-tag-height: 32px;
 $button-tag-padding-vertical: round(($button-tag-height - $font-line-box-main) / 2);
 
 :host {
-  display: inline-block;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
   box-sizing: border-box;
   padding: $button-padding-vertical $button-padding-horizontal;
   margin: 0;
-  border: 1px solid; // todo
-  border-color: $font-color-secondary; // todo
+  border: none;
   border-radius: 8px; // todo
   background-color: #ffffff; // todo
   box-shadow: 0 2px 23px 0 rgba(0, 0, 0, 0.06); // todo
   outline: none;
+  vertical-align: top;
   font-family: $font-family-default;
   font-weight: $font-weight-bold;
-  font-size: $font-size-main;
-  line-height: $font-line-height-main;
+  font-size: $font-heading-3-size; // todo
+  line-height: $font-heading-3-line-height; // todo
   text-align: center;
   color: $font-color-main;
   cursor: pointer;
@@ -43,12 +45,20 @@ $button-tag-padding-vertical: round(($button-tag-height - $font-line-box-main) /
     opacity: .5;
     cursor: default;
   }
+
+  // todo
+  ::ng-deep {
+
+    .button-icon {
+      display: block;
+      margin-right: 4px;
+    }
+  }
 }
 
 :host(.button-primary) {
-  border-color: transparent;
   background-image: linear-gradient(to right, #33a7d8, #62d3ee); // todo
-  background-origin: border-box;
+  background-repeat-x: repeat; // todo
   box-shadow: 0 0 40px 0 rgba(51, 167, 216, 0.56); // todo
   color: #ffffff; // todo
 
@@ -68,9 +78,10 @@ $button-tag-padding-vertical: round(($button-tag-height - $font-line-box-main) /
 :host(.button-tag) {
   padding-top: $button-tag-padding-vertical;
   padding-bottom: $button-tag-padding-vertical;
-  border-color: transparent;
   border-radius: 4px; // todo
   box-shadow: 0 2px 23px 0 rgba(0, 0, 0, 0.06); // todo
+  font-size: $font-size-main;
+  line-height: $font-line-height-main;
 
   &:not(.button-primary) {
     color: $font-color-secondary;
@@ -89,7 +100,23 @@ $button-tag-padding-vertical: round(($button-tag-height - $font-line-box-main) /
   }
 }
 
-:host(.button-block) {
-  display: block;
+:host(.button-icon-only) {
+  width: 32px;
+  height: 32px;
+  background: transparent;
+  box-shadow: none;
+  color: $font-color-main;
+  padding: 0;
+
+  // todo
+  ::ng-deep {
+
+    .button-icon {
+      margin-right: 0;
+    }
+  }
+}
+
+:host(.button-full-width) {
   width: 100%;
 }
