update About Us icons

--- a/lib/src/components/containers/about_container/about_container.html
+++ b/lib/src/components/containers/about_container/about_container.html
@@ -28,31 +28,47 @@
   class="about__options">
   <li
     class="about__options-item">
-    <img
-      src="assets/images/about/feature.png" 
-      alt=""
-      role="presentation" 
-      height="40">
+    <svg
+      aria-hidden="true"
+      xmlns="http://www.w3.org/2000/svg" 
+      width="37" height="40" viewBox="0 -3 37 40">
+      <g fill="none" fill-rule="evenodd">
+        <path stroke="#FCDE98" d="M1 11h24v24H1z"/>
+        <path fill="#FCDE98" d="M13 0h24v24H13z"/>
+      </g>
+    </svg>
     <div
       class="about__options-item-text">запили фичу, которой тебе не&nbsp;хватает</div>
   </li>
   <li
     class="about__options-item">
-    <img
-      src="assets/images/about/bug.png" 
-      alt=""
-      role="presentation" 
-      height="40">
+    <svg
+      aria-hidden="true"
+      xmlns="http://www.w3.org/2000/svg" 
+      width="35" height="40" viewBox="0 -4 35 40">
+      <g fill="none" fill-rule="evenodd">
+        <path stroke="#BCB2FA" d="M17 0l16 35H1z"/>
+        <path fill="#A698FC" d="M1 35V7.762l34 14.514z" opacity=".7"/>
+      </g>
+    </svg>
+  
     <div
       class="about__options-item-text">пофикси багу, которая тебя раздражает</div>
   </li>
   <li
     class="about__options-item">
-    <img
-      src="assets/images/about/idea.png" 
-      alt=""
-      role="presentation" 
-      height="40">
+    <svg
+      aria-hidden="true"
+      xmlns="http://www.w3.org/2000/svg" 
+      width="60" height="40" viewBox="0 -16 60 40">
+      <g fill="none" fill-rule="evenodd" transform="translate(0 -16)">
+          <circle cx="12" cy="28" r="12" fill="#FCDE98"/>
+          <circle cx="24" cy="28" r="12" fill="#FCCA98"/>
+          <circle cx="36" cy="28" r="12" fill="#FF9158" opacity=".8"/>
+          <circle cx="48" cy="28" r="12" fill="#FA6A67" opacity=".9"/>
+      </g>
+  </svg>
+  
     <div
       class="about__options-item-text">поделись своими безумными идеями с&nbsp;нами</div>
   </li>
