--- a/lib/src/components/containers/about_container/about_container.scss
+++ b/lib/src/components/containers/about_container/about_container.scss
@@ -34,16 +34,15 @@
 
     .about__options-item {
         flex-basis: 100px;
+        display: flex;
+        flex-direction: column;
 
         &:not(:last-child) {
             margin-right: 20px;
         }
 
-        img {
-            display: block;
-        }
         .about__options-item-text {
-            margin-top: 18px;
+            margin-top: 16px;
         }
     }
 
