--- a/lib/src/components/layout/layout.scss
+++ b/lib/src/components/layout/layout.scss
@@ -7,13 +7,13 @@
     display: grid;
     grid-template-rows: [header] auto [content] 1fr;
     height: 100%;
-    position: relative;
-    z-index: 0;
   }
 
   .content {
     max-height: 100%;
     padding: 0 24px;
     overflow-y: auto;
+    z-index: 0;
+    -webkit-overflow-scrolling: touch;
   }
 }
