refactor colors names

--- a/lib/src/components/containers/about_container/about_container.scss
+++ b/lib/src/components/containers/about_container/about_container.scss
@@ -64,7 +64,7 @@
 
     .about__alt-text {
         position: relative;
-        background: $bgr-color;
+        background: $bg-color;
         padding: 0 10px;
     }
 
