--- a/lib/src/components/containers/lecture_container/lecture_container.scss
+++ b/lib/src/components/containers/lecture_container/lecture_container.scss
@@ -22,7 +22,7 @@
   // event ---
 
   .event__meta {
-    color: $font-color-secondary;
+    color: $fg-color-secondary;
     margin-bottom: 4px;
   }
 
