--- a/lib/src/components/containers/lectures_container/lectures_container.scss
+++ b/lib/src/components/containers/lectures_container/lectures_container.scss
@@ -44,7 +44,7 @@
     margin-right: 16px;
     width: 5ch;
     padding-top: 16px;
-    color: $font-color-secondary;
+    color: $fg-color-secondary;
     position: relative;
 
     &::before {
@@ -103,7 +103,7 @@
   }
 
   .event-card__meta {
-    color: $font-color-secondary;
+    color: $fg-color-secondary;
     margin-bottom: 4px;
   }
 
