--- a/web/assets/styles/style.scss
+++ b/web/assets/styles/style.scss
@@ -15,7 +15,7 @@ body {
 
 html, body {
   min-height: 100%;
-  background-color: $bgr-color;
+  background-color: $bg-color;
   @include font-main;
 }
 
