--- a/web/assets/styles/variables.scss
+++ b/web/assets/styles/variables.scss
@@ -1,8 +1,13 @@
 // Colors
-$bgr-color: #f2f3fa;
-$font-color-main: #272a36;
-$font-color-secondary: #898a92;
+$bg-color: #f2f3fa;
+$fg-color-primary: #272a36;
+$fg-color-secondary: #898a92;
 $link-color: #68c0e3;
+
+// TODO remove after merge
+$bgr-color: $bg-color;
+$font-color-main: $fg-color-primary;
+$font-color-secondary: $fg-color-secondary;
 
 // Utility
 $border-radius: 8px;
