fix checkbox visibility on iOS

--- a/lib/src/components/ui/section/section.html
+++ b/lib/src/components/ui/section/section.html
@@ -6,7 +6,7 @@
   <input
     [checked]="isChecked"
     type="checkbox"
-    class="section__input">
+    class="section__input visually-hidden">
 
   <span
     class="section__box">
