rewamp Lecture view: improve structure, texts, selectors

--- a/lib/src/components/containers/lectures_container/lectures_container.scss
+++ b/lib/src/components/containers/lectures_container/lectures_container.scss
@@ -100,6 +100,7 @@
     border-radius: 6px; // todo
     background-color: #ffffff; // todo
     box-shadow: 0 2px 23px 0 rgba(0, 0, 0, 0.06); // todo
+    cursor: pointer;
   }
 
   .event-card__meta {
